@@ -54,6 +54,8 @@ typedef struct {
 
 typedef struct {
 	GtkTableClass parent_class;
+
+	void        (*row_selection)      (ETable *et, int row, gboolean selected);
 } ETableClass;
 
 GtkType    e_table_get_type  (void);
