@@ -29,6 +29,7 @@
 static GnomeCanvasGroupClass *etg_parent_class;
 
 enum {
+	ROW_SELECTION,
 	RESIZE,
 	LAST_SIGNAL
 };
@@ -228,6 +229,17 @@ e_table_group_resize (ETableGroup *e_table_group)
 			 etg_signals [RESIZE]);
 }
 
+void
+e_table_group_row_selection (ETableGroup *e_table_group, gint row, gboolean selected)
+{
+	g_return_if_fail (e_table_group != NULL);
+	g_return_if_fail (E_IS_TABLE_GROUP (e_table_group));
+
+	gtk_signal_emit (GTK_OBJECT (e_table_group),
+			 etg_signals [ROW_SELECTION],
+			 row, selected);
+}
+
 ETableHeader *
 e_table_group_get_header (ETableGroup *etg)
 {
@@ -339,6 +351,7 @@ etg_class_init (GtkObjectClass *object_class)
 	item_class->event = etg_event;
 
 	klass->resize = NULL;
+	klass->row_selection = NULL;
 	
 	klass->add = NULL;
 	klass->remove = NULL;
@@ -354,6 +367,14 @@ etg_class_init (GtkObjectClass *object_class)
 	klass->set_width = NULL;
 	
 	etg_parent_class = gtk_type_class (PARENT_TYPE);
+
+	etg_signals [ROW_SELECTION] =
+		gtk_signal_new ("row_selection",
+				GTK_RUN_LAST,
+				object_class->type,
+				GTK_SIGNAL_OFFSET (ETableGroupClass, row_selection),
+				gtk_marshal_NONE__INT_INT,
+				GTK_TYPE_NONE, 2, GTK_TYPE_INT, GTK_TYPE_INT);
 
 	etg_signals [RESIZE] =
 		gtk_signal_new ("resize",
