@@ -1,3 +1,14 @@
+2000-03-06  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-table.c, e-table.h: Add a "row_selection" signal.
+
+	* test-table.c: Test the new "row_selection" signal.
+
+	* e-table-group-container.c, e-table-group-leaf.c: Implement the
+	"row_selection" property properly.
+
+	* e-table-group.c, e-table-group.h: Add a "row_selection" signal.
+
 2000-03-05  Christopher James Lahey  <clahey@helixcode.com>
 
 	* e-table.c, e-table.h: Added support for the sorting info.  The
